Tue Jan  7 00:17:40 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: setup BstAppControl, update led.

	* beast-gtk/bstappcontrol.[hc]: new files, providing a tape-control
	alike GUI interface to project playback (not currently functional).

	* beast-gtk/gxk/gxkled.[hc]: implemented led display widget.

	* beast-gtk/gxk/gxkpolygon.[hc]: new widget that can display
	unfilled lines and arcs, comes with preset polygons for tape
	controls.

	* beast-gtk/gxk/gxktest.c: test program for GXK code.

	* */Makefile.am: general INCLUDE fixes.

	* beast-gtk/Makefile.am: maintain same source file order for headers
	and C sources.

	* beast-gtk/gxk/Makefile.am: compact source file listing, build
	gxktest.

Sun Jan  5 23:50:56 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/teximacros.texi: fix @path{} macro handling.

Sat Jan  4 12:42:10 2003  Alper Ersoy  <dirt@gtk.org>

	* bse/bseautodoc.c: s/Document Revision/Document Revised/.
	
	* docs/generated/scandocs.pl: fix sorting of function descriptions.
	
Fri Jan  3 08:46:46 2003  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: 
	* docs/site-oldnews.texi: rotate news, so there're only two
	entries on the front page.

Thu Jan  2 18:19:19 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/html.xsl: small fix from alper.

	* docs/site-development.texi: use @example for markup.

Thu Jan  2 17:23:54 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/generated/*.xsl: 
	* docs/WRITING.3.texi: use @example as a replacement for buggy
	@verbatim until makeinfo got fixed. support relative (non-//) urls
	for e.g. mailto:.
	
	* docs/generated/site-*.texi: fixed relative urls.

Thu Jan  2 06:05:26 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/Makefile.am: support additional rules
	site-update-contents and site-update-navigation or just site-update
	to auto upload generated website contents and regenerate website
	files.

Wed Jan  1 17:07:36 2003  Tim Janik  <timj@gtk.org>

	* docs/site-links-related.texi: